Hibernate the thread if there are no events in the queue. Wake it up when an event is added to the queue.

BUG=614192

Review-Url: https://codereview.webrtc.org/2035483003
Cr-Commit-Position: refs/heads/master@{#13070}